@@ -1,3 +1,9 @@
+2008-01-30  Sébastien Granjoux  <seb.sfo@free.fr>
+
+	* plugins/tools/editor.c:
+ 	ianjuta_document_manager_find_document_with_path expect an uri not
+	a path
+
 2008-01-29  Sébastien Granjoux  <seb.sfo@free.fr>
 
 	* manuals/reference/libanjuta/libanjuta-docs.sgml,
